# celery-worker-template

./: .env.sample  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  start_worker.sh
worker/: config.py  email_helper.py  worker.py
