[tool.poetry]
name = "celery-worker-template"
version = "0.1.0"
description = "Celery Worker for executing tasks"
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"
packages = [{include = "celery_worker_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.core.dependencies]
celery = "^5.3.0"
redis = "^4.5.5"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
